Squashed alpha-1.5.0-pre04
commit 54448331cd2dc26f0e9506ff4b468bf48433b2f3
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Oct 29 18:38:41 2015 +0100

    Move "remove format" action to style menu

commit 61f64a7fcc5b1f0569c20f00cb765a8c7e0f8808
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Oct 29 18:25:38 2015 +0100

    Style block gap style_block_gap=24 pt
    # Conflicts:
    #	freeplane/viewer-resources/freeplane.properties

commit 9884e59e6e1f164fd682846128b55e0a7f4842b6
Merge: 9788e02 9c5133b
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Oct 29 18:16:42 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 9788e02eef0e7d4af2384ac03223af083c2090c8
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Oct 29 18:15:39 2015 +0100

    Fix currentMapView bug

commit 1be69aa3b9d235aa98691b20b0f184aab4a21d8f
Merge: af81091 5775ce6
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Oct 29 17:59:57 2015 +0100

    Merge commit '5775ce62b60389b9f796f897476f8841d81441e2' into 1.5.x

commit 5775ce62b60389b9f796f897476f8841d81441e2
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Oct 29 17:58:04 2015 +0100

    Fix Jav 5 issues

commit af81091125d95ed81797e9bad5df9b4512e354d9
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Oct 29 17:54:47 2015 +0100

    Fix compile errors

commit 1c94d66e5bf19932aa7527fb421b63e47a9c7f44
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Oct 29 14:41:51 2015 +0100

    Add missed text string

commit d4908c75cf936c4e82671ba97505e02ab972305d
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Oct 29 14:52:37 2015 +0100

    Fix caching of edge color in node view
    # Conflicts:
    #	freeplane/src/org/freeplane/features/edge/EdgeController.java

commit 910c0defe752dd678759cc7b5fd7e438c0bf40b7
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Oct 29 14:52:19 2015 +0100

    ObjectRule

commit 4cf47ba2b6436d43ec216d0fe58904be5e5696df


--- a/freeplane/resources/translations/Resources_da.properties
+++ b/freeplane/resources/translations/Resources_da.properties
@@ -139,6 +139,7 @@ automatic_layout_disabled=deaktiveret
 automatically_save_message=Mindmap blev automatisk gemt (med filnavnet {0}) \u2026
 AutomaticEdgeColorHookAction.text=Automatisk kantfarve
 AutomaticLayout.ALL=for alle knudepunkter
+AutomaticLayout.COLUMNS=for kolonner
 AutomaticLayout.HEADINGS=for ikke blade knudepunkter
 AutomaticLayout.level=Niveau {0}
 AutomaticLayout.level.root=Roden
@@ -675,6 +676,11 @@ LatexInsertLatexAction.msg1=<html>Du fors\u00F8ger at inds\u00E6tte en <i>\u00E6
 LatexInsertLatexAction.msg2=<html>Kort sagt: <ul><li>brug "\\latex" pr\u00E6fiks i knudepunktsteksten eller </li><li><i> panel Vis-> Egenskaber</i>, derefter<i>Core tekst ->Format->Latex</i></li></ul></html>
 LatexInsertLatexAction.text=Tilf\u00F8j &LaTeX-formular...
 latexPatternFormat=LaTeX
+LengthUnits.cm=cm
+LengthUnits.in=tommer
+LengthUnits.mm=mm
+LengthUnits.pt=pt
+LengthUnits.px=px
 less_than_two_selected_nodes=V\u00E6lg mindst to knudepunkt for at f\u00E5 links.
 license=Licens: GPL 2 eller senere
 license_text=<html>Dette program er fri software. Du kan redistribuere og/eller<br>modificere det under de betingelser der er angivet i GNU General Public License,<br>som udgivet af Free Software Foundation; enten version 2<br>af licensen eller (efter eget valg) enhver senere version.<br><br>Dette program distribueres i h\u00E5b om at det vil vise sig nyttigt,<br>men UDEN NOGEN FORM FOR GARANTI; selv uden de underforst\u00E5ede garantier<br>omkring SALGBARHED eller EGNETHED TIL ET BESTEMT FORM\u00C5L.<br>Yderligere detaljer kan l\u00E6ses i GNU General Public License.<br><br>Du b\u00F8r have modtaget en kopi af GNU General Public License sammen med<br>dette program. Hvis ikke, s\u00E5 skriv til Free Software Foundation, Inc.,<br>51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
@@ -919,6 +925,8 @@ OptionPanel.backup_file_number=Antallet af bevarede sikkerhedskopi filer
 OptionPanel.Behaviour=Opf\u00F8rsel
 OptionPanel.bezier=J\u00E6vnbue (bezier)
 OptionPanel.bubble=Boble
+OptionPanel.bubble_vertical_margin=Boble margin
+OptionPanel.bubble_vertical_margin.tooltip=Lodret mellemrum i boble node margen
 OptionPanel.ca=Catalansk, valenciansk/Catal\u00E0
 OptionPanel.Cancel=Annuller
 OptionPanel.center_selected_node=Centrer valgt knudepunkt automatisk
@@ -1282,6 +1290,7 @@ OptionPanel.structured_icon_toolbar=Struktureret ikon v\u00E6rkt\u00F8jslinie
 OptionPanel.summary=Resum\u00E9
 OptionPanel.sv=Svensk/svenska
 OptionPanel.text.use_ctrl_key=Brug 'Tildel genvej' fra v\u00E6rkt\u00F8js-menuen
+OptionPanel.textalignment=Tekstjustering
 OptionPanel.time_for_automatic_save=Tid for automatisk gem
 OptionPanel.time_for_automatic_save.tooltip=<html> tiden imellem to p\u00E5 hinanden f\u00F8lgende automatiske gemninger (i msek): For at afstille automatisk gem s\u00E6t dette tal til 2000000000.</html>
 OptionPanel.time_for_delayed_selection=Tid for forsinket valg
@@ -1291,6 +1300,7 @@ OptionPanel.toolTipManager.initialDelay=Indledende forsinkelse, ms
 OptionPanel.toolTipManager.max_tooltip_width=V\u00E6rkt\u00F8jstip bredde
 OptionPanel.toolTipManager.max_tooltip_width.tooltip=<html>Standard v\u00E6rkt\u00F8jstip bredde i pixels.</html>
 OptionPanel.toolTipManager.reshowDelay=Genvisning forsinkelse, ms
+OptionPanel.tr=Tyrkisk / T\u00FCrk\u00E7e
 OptionPanel.uk_UA=Ukrainsk/\u0423\u043A\u0440\u0430\u0457\u043D\u0441\u044C\u043A\u0430
 OptionPanel.undefined_font=Udefineret skrifttype
 OptionPanel.undo_levels=Fortryd niveauer
@@ -1309,6 +1319,8 @@ OptionPanel.validate_invalid_number_format=Ugyldig standard talformat
 OptionPanel.validate_write_without_read=Skripting: overvej for at tilf\u00F8je L\u00E6s/fil til at Skriv/fil.
 OptionPanel.validation_error=<html><body>Validering fejl: <p><em>{0}</em> <p>skal du \u00E6ndre indstillinger til at ordne fejl.</body></html>
 OptionPanel.validation_warning=<html><body>Validering advarsler: <p><em>{0}</em></body></html>
+OptionPanel.vertical_child_gap=Barn margin
+OptionPanel.vertical_child_gap.tooltip=Lodret afstand mellem underordnede noder
 OptionPanel.vi=Vietnamesisk/Ti\u1EBFng Vi\u1EC7t
 OptionPanel.wheel_velocity=Hastighed
 OptionPanel.wheel_velocity.tooltip=En st\u00F8rre v\u00E6rdi resulterer i hurtigere bev\u00E6gelser af MindMap ved bev\u00E6gelse af musehjulet.
@@ -1466,7 +1478,7 @@ script_execution_disabled=Skriptudf\u00F8relse er deaktiveret, se v\u00E6rkt\u00
 ScriptEditor.text=Script Editor...
 ScriptEditor.tooltip=Tillader at skrive st\u00F8rre scripts inden i Freeplane.
 ScriptEditorPanel.changed_cancel=Scriptene er blevet \u00E6ndret. \u00D8nsker du virkelig at forlade disse \u00E6ndringer?
-scripting_api_generator_legend=Legend
+scripting_api_generator_legend=Tegnforklaring
 scripting_api_generator_proxy=Proxy
 scripting_api_generator_title=Skripting API
 scripting_api_generator_utilities=Hj\u00E6lpeprogrammer
@@ -1738,6 +1750,11 @@ summary_not_possible=Kan ikke oprette oversigts knudepunkt for aktuel markering
 SummaryNodeAction.text=Sammenfattende knudepunkt(indstil/nulstil)
 svg=SVG
 template_dir=Standard skabeloner
+TextAlignAction.CENTER.text=Centreret tekst
+TextAlignAction.DEFAULT.text=Standard
+TextAlignAction.LEFT.text=Venstrejusteret tekst
+TextAlignAction.RIGHT.text=H\u00F8jrejusteret tekst
+textalignment=Tekstjustering
 TimeListAction.text=Vis tidsskema listen...
 TimeListAction.tooltip=Vis alle skemalagte tider og de tilh\u00F8rende knudepunkter.
 TimeManagementAction.text=Vis kalender...
