--- a/freeplane/resources/translations/Resources_fr.properties
+++ b/freeplane/resources/translations/Resources_fr.properties
@@ -139,6 +139,7 @@ automatic_layout_disabled=D\u00E9sactiv\u00E9
 automatically_save_message=Carte sauvegard\u00E9e automatiquement sous : {0}
 AutomaticEdgeColorHookAction.text=Couleur de ligne automatique
 AutomaticLayout.ALL=Pour tous les niveaux
+AutomaticLayout.COLUMNS=pour les colonnes
 AutomaticLayout.HEADINGS=Sauf pour les derniers niveaux
 AutomaticLayout.level=Niveau {0}
 AutomaticLayout.level.root=Racine
