--- a/freeplane/resources/translations/Resources_zh_TW.properties
+++ b/freeplane/resources/translations/Resources_zh_TW.properties
@@ -139,6 +139,7 @@ automatic_layout_disabled=\u4E0D\u4F7F\u7528
 automatically_save_message=\u6A94\u6848\u81EA\u52D5\u5B58\u6A94 (\u6A94\u540D\u662F{0}) ...
 AutomaticEdgeColorHookAction.text=\u81EA\u52D5\u5206\u652F\u984F\u8272
 AutomaticLayout.ALL=\u6240\u6709
+AutomaticLayout.COLUMNS=\u70BA\u6B04\u4F4D
 AutomaticLayout.HEADINGS=\u6A19\u984C
 AutomaticLayout.level=\u7B2C {0} \u5C64\u7BC0\u9EDE\u683C\u5F0F
 AutomaticLayout.level.root=\u4E3B\u7BC0\u9EDE\u683C\u5F0F
