--- a/freeplane/viewer-resources/translations/Resources_en.properties
+++ b/freeplane/viewer-resources/translations/Resources_en.properties
@@ -146,6 +146,7 @@ AutomaticLayout.level.root=Root
 AutomaticLayoutAction.text=&Apply level styles
 AutomaticLayoutAction.tooltip=<html>Fixes the layout of the map. <br>The first level is black, the second blue, etc.</html>
 AutomaticLayoutControllerAction.ALL.text=for all nodes
+AutomaticLayoutControllerAction.COLUMNS.text=for columns
 AutomaticLayoutControllerAction.HEADINGS.text=for non leave nodes
 AutomaticLayoutControllerAction.null.text=disabled
 BackAction.text=Go backward
