Squashed alpha-1.5.0-pre05
commit 5c6bb99814e4305dd94e11e3fd94827baf71a69e
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Fri Oct 30 22:06:05 2015 +0100

    Remove unused var

commit 2ecad07c01418e20b763a627c41bea44c6d747cb
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Fri Oct 30 22:05:49 2015 +0100

    Remove unused method getPreferredSize,
    the logic is implemented in UI and layout components

commit 4f32f4c850eed5f7a8277f69e81439024ae829c3
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Fri Oct 30 22:05:00 2015 +0100

    Let root node be circle if it is possible for given max width

commit 22b67ac8874c90e4bc83a170920699e7ebc88570
Merge: 4c1287b 26218fc
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Fri Oct 30 17:05:09 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 4c1287bd503149049d1dd689f0ba2ce919df9775
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Fri Oct 30 17:04:58 2015 +0100

    History

commit 26218fccadb4a09b6f5123e35ac308ded40206e8
Merge: 53523c3 d020ff0
Author: Weblate <noreply@weblate.org>
Date:   Fri Oct 30 16:58:34 2015 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit 53523c3a84f2c9a19780718d9f36815897776a3e
Author: Ldm Public <ldmpub@gmail.com>
Date:   Thu Oct 29 19:59:48 2015 +0100

    Translated using Weblate (French)

    Currently translated at 99.3% (1815 of 1826 strings)

commit e7385326bc12001cb90b9764c1a9d4e0710a8787
Author: ezjerry liao <ezjerry@gmail.com>
Date:   Fri Oct 30 02:38:48 2015 +0100

    Translated using Weblate (Chinese (Taiwan))

    Currently translated at 100.0% (1826 of 1826 strings)

commit d020ff0fe921eeb21f4fd5415445651b0d6d2559
Merge: 09edcae cc1e82f
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Fri Oct 30 16:58:28 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 09edcae9fe6a0ff0165bb021f5336db6d52c5047
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Fri 

--- a/freeplane/resources/translations/Resources_fr.properties
+++ b/freeplane/resources/translations/Resources_fr.properties
@@ -146,6 +146,7 @@ AutomaticLayout.level.root=Racine
 AutomaticLayoutAction.text=Styles automatiques par niveau
 AutomaticLayoutAction.tooltip=Applique \u00E0 toute la carte une mise en forme des n\u0153uds en fonction de leur niveau
 AutomaticLayoutControllerAction.ALL.text=Pour tous les niveaux
+AutomaticLayoutControllerAction.COLUMNS.text=pour les colonnes
 AutomaticLayoutControllerAction.HEADINGS.text=Sauf pour les derniers niveaux
 AutomaticLayoutControllerAction.null.text=D\u00E9sactiv\u00E9
 BackAction.text=N\u0153ud pr\u00E9c\u00E9dent dans l'historique
