--- a/freeplane/resources/translations/Resources_pt_PT.properties
+++ b/freeplane/resources/translations/Resources_pt_PT.properties
@@ -146,6 +146,7 @@ AutomaticLayout.level.root=Ra\u00EDz
 AutomaticLayoutAction.text=&Aplicar estilos por n\u00EDvel
 AutomaticLayoutAction.tooltip=<html>Fixa o desenho do mapa. <br>O primeiro n\u00EDvel \u00E9 preto, o segundo azul, etc.</html>
 AutomaticLayoutControllerAction.ALL.text=para todos os n\u00F3s
+AutomaticLayoutControllerAction.COLUMNS.text=para colunas
 AutomaticLayoutControllerAction.HEADINGS.text=para n\u00F3s finais
 AutomaticLayoutControllerAction.null.text=desativado
 BackAction.text=Recuar
