--- a/freeplane/resources/translations/Resources_uk_UA.properties
+++ b/freeplane/resources/translations/Resources_uk_UA.properties
@@ -146,6 +146,7 @@ AutomaticLayout.level.root=\u041A\u043E\u0440\u0456\u043D\u044C
 AutomaticLayoutAction.text=\u0410\u0432\u0442\u043E\u043C\u0430\u0442\u0438\u0447\u043D\u0435 \u043F\u043E\u0437\u0438\u0446\u0456\u043E\u043D\u0443\u0432\u0430\u043D\u043D\u044F
 AutomaticLayoutAction.tooltip=<html> \u0424\u0456\u043A\u0441\u0443\u0454 \u0432\u0438\u0434 \u043A\u0430\u0440\u0442\u0438 <br> \u0412\u0443\u0437\u043B\u0438 \u043F\u0435\u0440\u0448\u043E\u0433\u043E \u0440\u0456\u0432\u043D\u044F \u0441\u0442\u0430\u043D\u0443\u0442\u044C \u0447\u043E\u0440\u043D\u0438\u043C\u0438, \u0434\u0440\u0443\u0433\u043E\u0433\u043E - \u0441\u0438\u043D\u0456\u043C\u0438 \u0456 \u0442\u0430\u043A \u0434\u0430\u043B\u0456 </html>
 AutomaticLayoutControllerAction.ALL.text=\u0434\u043B\u044F \u0432\u0441\u0456\u0445 \u0432\u0443\u0437\u043B\u0456\u0432
+AutomaticLayoutControllerAction.COLUMNS.text=\u0434\u043B\u044F \u0441\u0442\u043E\u0432\u043F\u0447\u0438\u043A\u0456\u0432
 AutomaticLayoutControllerAction.HEADINGS.text=\u0434\u043B\u044F \u043D\u0435 \u043A\u0440\u0430\u0439\u043D\u0456\u0445 \u0432\u0443\u0437\u043B\u0456\u0432
 AutomaticLayoutControllerAction.null.text=\u0432\u0438\u043C\u043A\u043D\u0435\u043D\u043E
 BackAction.text=\u041D\u0430\u0437\u0430\u0434
