--- a/freeplane/resources/translations/Resources_zh_TW.properties
+++ b/freeplane/resources/translations/Resources_zh_TW.properties
@@ -146,6 +146,7 @@ AutomaticLayout.level.root=\u4E3B\u7BC0\u9EDE\u683C\u5F0F
 AutomaticLayoutAction.text=(&A)\u81EA\u52D5\u6392\u7248
 AutomaticLayoutAction.tooltip=<html>\u81EA\u52D5\u8A2D\u5B9A\u6BCF\u5C64\u7BC0\u9EDE\u548C\u5206\u652F\u7DDA\u7684\u683C\u5F0F</html>
 AutomaticLayoutControllerAction.ALL.text=\u5C0D\u6240\u6709\u7BC0\u9EDE
+AutomaticLayoutControllerAction.COLUMNS.text=\u70BA\u6B04\u4F4D
 AutomaticLayoutControllerAction.HEADINGS.text=\u5C0D\u975E\u7D42\u7AEF\u7BC0\u9EDE
 AutomaticLayoutControllerAction.null.text=\u4E0D\u4F7F\u7528
 BackAction.text=\u8FD4\u56DE
@@ -1567,7 +1568,7 @@ simplyhtml.cTagNameUL=\u7121\u5E8F\u5217\u8868
 simplyhtml.cutLabel=\u526A\u4E0B
 simplyhtml.cutTip=\u526A\u4E0B
 simplyhtml.defaultDocName=\u7121\u6A19\u984C
-simplyhtml.deleteTableColLabel=\u522A\u9664\u884C
+simplyhtml.deleteTableColLabel=\u522A\u9664\u6B04\u4F4D
 simplyhtml.deleteTableRowLabel=\u522A\u9664\u5217
 simplyhtml.docTitleQuery=\u8A2D\u5B9A\u6A19\u984C\uFF1A
 simplyhtml.docTitleTitle=\u7DE8\u8F2F\u6587\u4EF6\u6A19\u984C
@@ -1601,7 +1602,7 @@ simplyhtml.formatTableTip=\u683C\u5F0F\u8868
 simplyhtml.helpLabel=\u652F\u63F4
 simplyhtml.htmlTabTitle=\u6AA2\u8996 HTML \u78BC
 simplyhtml.imageFileDesc=\u5F71\u50CF\u6A94
-simplyhtml.insertTableColLabel=\u63D2\u5165\u4E00\u884C
+simplyhtml.insertTableColLabel=\u63D2\u5165\u4E00\u6B04
 simplyhtml.insertTableLabel=\u8868\u683C...
 simplyhtml.insertTableMsg=\u591A\u5C11\u6B04\u4F4D\uFF1F
 simplyhtml.insertTableRowLabel=\u63D2\u5165\u4E00\u5217
