Squashed alpha-1.5.0-pre11
commit 1c6f49644dd280177897f243c0ed9cde01e51797
Merge: 5595b3f 5bf835a
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 8 12:58:01 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane.git into 1.5.x

commit 5595b3fb2ee163a0c3accf5090f984eb4d64e0ab
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 8 12:53:42 2015 +0100

    Move child views of unvisible summaries to the right in the outline view

commit 38cf28e756d8cbcf9588de3e8013a61a6189cea9
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 8 12:47:50 2015 +0100

    summary HGAP 2/3 -> 7/12

commit a5d485a6e8f73e864f30834f1195f284e6d66da1
Merge: e0bb00a 76c412b
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 8 12:42:57 2015 +0100

    Merge branch '1.5.x' into summaries

commit e0bb00a95d2459012e432cbdbd86917b3e40adf9
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 8 12:33:09 2015 +0100

    Disable single node shift for child nodes under summary nodes

commit 95fd7f1f6efa5f238bb46ef89b54f0e662e5b415
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 8 12:32:48 2015 +0100

    Create summary child node automatically

commit aa7863b08880477e5f0f271d41bf295692204bd0
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Nov 8 12:21:50 2015 +0100

    invisible summaries
    # Conflicts:
    #	freeplane/src/main/java/org/freeplane/view/swing/map/VerticalNodeViewLayoutStrategy.java
    #	freeplane/src/org/freeplane/features/map/NodeModel.java

commit 5bf835a6ac47bfdaaaf2cedb8c83d9c7f0960b79
Merge: 28b0c66 d0aa203
Author: Weblate <noreply@weblate.org>
Date:   Sun Nov 8 10:15:56 2015 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit 28b0c668a33b1a4e6599a7103270b8b21555db7f
Author: Ldm Public <ldmpub@gmail.com>
Date:   Sat Nov 7 22:59:57 2015 +0100

    Translated using Weblate (French)

    Currently translated at 99.2% (1823 of 1836 strings)

commit d0aa203a5bba698d9d333457cdc46a

--- a/freeplane/resources/translations/Resources_pt_PT.properties
+++ b/freeplane/resources/translations/Resources_pt_PT.properties
@@ -968,6 +968,7 @@ OptionPanel.default_browser_command_windows_9x.tooltip=<html>Para o Windows (as 
 OptionPanel.default_browser_command_windows_nt=Comando predefinido do navegador Windows NT
 OptionPanel.default_browser_command_windows_nt.tooltip=<html>Para o Windows (as "" aspas s\u00E3o necess\u00E1rias porque as liga\u00E7\u00F5es t\u00EAm "=" no URL).</html>
 OptionPanel.default_charset=Conjunto de carateres
+OptionPanel.default_save_dir=Pasta de grava\u00E7\u00E3o predefinida
 OptionPanel.Defaults=Predefini\u00E7\u00F5es
 OptionPanel.delete_automatic_saves_at_exit=Eliminar grava\u00E7\u00F5es autom\u00E1ticas ao sair
 OptionPanel.delete_automatic_saves_at_exit.tooltip=<html> Se os ficheiros devem ser eliminados automaticamente no encerramento normal do Freeplane, defina esta vari\u00E1vel como verdadeira</html>
