--- a/freeplane/resources/translations/Resources_zh_TW.properties
+++ b/freeplane/resources/translations/Resources_zh_TW.properties
@@ -967,6 +967,7 @@ OptionPanel.default_browser_command_windows_9x.tooltip=<html>\u9019 "" \u662F\u5
 OptionPanel.default_browser_command_windows_nt=\u547C\u53EB\u700F\u89BD\u5668\u6240\u4F7F\u7528\u4E4B\u547D\u4EE4\u63D0\u793A\u5B57\u5143\u57F7\u884C\u53C3\u6578(Windows NT)
 OptionPanel.default_browser_command_windows_nt.tooltip=<html>\u9019 "" \u662F\u5FC5\u9808\u7684, \u56E0\u70BA\u4ED6\u5011\u7684 URL \u6709 "=".</html>
 OptionPanel.default_charset=\u9810\u8A2D\u5B57\u5143\u96C6
+OptionPanel.default_save_dir=\u9810\u5148\u8A2D\u7F6E\u5132\u5B58\u76EE\u9304
 OptionPanel.Defaults=\u7248\u9762\u8A2D\u5B9A
 OptionPanel.delete_automatic_saves_at_exit=\u7576\u96E2\u958B\u6642\u522A\u9664\u81EA\u52D5\u5132\u5B58\u6A94
 OptionPanel.delete_automatic_saves_at_exit.tooltip=<html> \u5982\u679C\u6B63\u5E38\u95DC\u9589\u6642\u60F3\u81EA\u52D5\u522A\u9664\uFF0C\u8ACB\u52FE\u9078\u3002</html>
