--- a/freeplane/resources/translations/Resources_fr.properties
+++ b/freeplane/resources/translations/Resources_fr.properties
@@ -965,6 +965,7 @@ OptionPanel.default_browser_command_windows_9x.tooltip=<html>Pour Windows (les s
 OptionPanel.default_browser_command_windows_nt=Commande pour le navigateur par d\u00E9faut pour Windows NT
 OptionPanel.default_browser_command_windows_nt.tooltip=<html>Pour Windows (les signes "" sont n\u00E9cessaires \u00E0 cause des liens qui contiennent un caract\u00E8re "=" dans leur URL).</html>
 OptionPanel.default_charset=Jeu de caract\u00E8res
+OptionPanel.default_save_dir=Dossier par d\u00E9faut des enregistrements
 OptionPanel.Defaults=R\u00E9glages par d\u00E9faut
 OptionPanel.delete_automatic_saves_at_exit=Supprimer les sauvegardes automatiques en quittant
 OptionPanel.delete_automatic_saves_at_exit.tooltip=Si vous souhaitez supprimer les fichiers cr\u00E9\u00E9s automatiquement lorsque Freeplane se termine normalement, cochez cette option.
