--- a/freeplane/viewer-resources/translations/Resources_en.properties
+++ b/freeplane/viewer-resources/translations/Resources_en.properties
@@ -964,6 +964,7 @@ OptionPanel.default_browser_command_windows_9x.tooltip=<html>For Windows (the ""
 OptionPanel.default_browser_command_windows_nt=Default browser command Windows Nt
 OptionPanel.default_browser_command_windows_nt.tooltip=<html>For Windows (the "" signs are necessary due to links, that have "=" in their URL).</html>
 OptionPanel.default_charset=Charset
+OptionPanel.default_save_dir=Default save directory
 OptionPanel.Defaults=Defaults
 OptionPanel.delete_automatic_saves_at_exit=Delete automatic saves at exit
 OptionPanel.delete_automatic_saves_at_exit.tooltip=<html> If the files should be deleted automatically on a normal shutdown of Freeplane set the following variable to true</html>
