Squashed alpha-1.5.0-pre03
commit 23c7617b852eef80b7997a3d734913a523360c12
Merge: 6f73d50 fef34b6
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Wed Oct 28 23:15:49 2015 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 6f73d50a30c3ddb4597db37b242501dab9734d67
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Wed Oct 28 23:15:27 2015 +0100

    Fix AutomaticLayout boolean flags

commit fef34b65538aa0f19677e7fb7efc4bcd3b08d063
Author: Олександр Пилипчук <pilipchukap@rambler.ru>
Date:   Tue Oct 27 18:04:42 2015 +0100

    Translated using Weblate (Ukrainian)

    Currently translated at 100.0% (1825 of 1825 strings)

commit 4047272782ed7286c51cbfedaa2208b892dd7173
Author: Predrag Cuklin <pcuklin@gmail.com>
Date:   Wed Oct 28 21:35:17 2015 +0100

    Translated using Weblate (Croatian)

    Currently translated at 100.0% (1825 of 1825 strings)

commit 403aa9942b3b78ac39a1ba7e0a5a328f2681f290
Author: Pedro Albuquerque <palbuquerque73@gmail.com>
Date:   Wed Oct 28 21:09:23 2015 +0100

    Translated using Weblate (Portuguese (Portugal))

    Currently translated at 100.0% (1825 of 1825 strings)

commit 10cc0ccd20183d7d3590e83e3583047129d7aefe
Merge: 4e66cfa 8b4f05d
Author: Weblate <noreply@weblate.org>
Date:   Wed Oct 28 19:48:23 2015 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit 4e66cfac4ca5a11b790954306ca2fba6b31d8cf4
Merge: ba1fb0e 37534d0
Author: Weblate <noreply@weblate.org>
Date:   Wed Oct 28 19:44:47 2015 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit ba1fb0e408be9d73f52cbb24066fa1d365955ae6
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Oct 26 22:24:18 2015 +0100

    Translated using Weblate (Russian)

    Currently translated at 99.3% (1812 of 1824 strings)

commit 0dcc630e5f1f71808569924daa66a319b0f7de0d
Author: Ldm Public <ldmpub@gmail.com>
Date:   Mon Oct 26 20:30:36 2015 +0100

    Translated using Weblate (French)

    Currently translated at 9

--- a/freeplane/resources/translations/Resources_fr.properties
+++ b/freeplane/resources/translations/Resources_fr.properties
@@ -672,6 +672,11 @@ LatexDeleteLatexAction.text=Supprimer la formule LaTeX
 LatexEditLatexAction.text=Modifier la formule LaTeX...
 LatexInsertLatexAction.text=Ajouter une formule LaTeX...
 latexPatternFormat=LaTeX
+LengthUnits.cm=cm
+LengthUnits.in=in
+LengthUnits.mm=mm
+LengthUnits.pt=pt
+LengthUnits.px=px
 less_than_two_selected_nodes=Vous devez s\u00E9lectionner au moins deux n\u0153uds pour les lier.
 license=Licence
 license_text=<html>Le pr\u00E9sent programme est un logiciel libre\u00A0; vous pouvez le redistribuer et/ou <br>le modifier conform\u00E9ment aux conditions de la Licence G\u00E9n\u00E9rale Publique GNU (GNU General Public License) <br>telle qu'elle est publi\u00E9e par la Free Software Foundation\u00A0; que ce soit la<br> version\u00A02 de la licence, ou (\u00E0 votre choix) toute version ult\u00E9rieure.<br><br>Le pr\u00E9sent programme est distribu\u00E9 aux fins d'\u00EAtre utile, <br>mais SANS AUCUNE GARANTIE\u00A0; sans m\u00EAme la garantie implicite de <br>COMMERCIABILIT\u00C9 ou D'AD\u00C9QUATION \u00C0 UN USAGE SP\u00C9CIFIQUE. Reportez-vous <br>\u00E0 la Licence G\u00E9n\u00E9rale Publique GNU (GNU General Public License) pour plus de d\u00E9tails.<br><br>Vous devriez avoir re\u00E7u une copie de la Licence G\u00E9n\u00E9rale Publique<br> GNU (GNU General Public License) avec le pr\u00E9sent programme\u00A0;<br> dans le cas contraire, \u00E9crivez \u00E0 la Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
@@ -916,6 +921,8 @@ OptionPanel.backup_file_number=Nombre de fichiers de sauvegarde conserv\u00E9s
 OptionPanel.Behaviour=Comportement
 OptionPanel.bezier=Courbe
 OptionPanel.bubble=Bulle
+OptionPanel.bubble_vertical_margin=Marge de la bulle
+OptionPanel.bubble_vertical_margin.tooltip=Espacement vertical de la bulle
 OptionPanel.ca=Catalan
 OptionPanel.Cancel=Annuler
 OptionPanel.center_selected_node=Centrer automatiquement la carte sur la s\u00E9lection
@@ -1269,6 +1276,7 @@ OptionPanel.structured_icon_toolbar=Organiser la barre d'ic\u00F4nes
 OptionPanel.summary=Synth\u00E8se
 OptionPanel.sv=Su\u00E9dois
 OptionPanel.text.use_ctrl_key=Pour d\u00E9finir un raccourci clavier, utilisez la commande "Cr\u00E9er un nouveau raccourci..." disponible dans le menu "Outils".
+OptionPanel.textalignment=Alignement du texte
 OptionPanel.time_for_automatic_save=Fr\u00E9quence de sauvegarde automatique (en millisecondes)
 OptionPanel.time_for_automatic_save.tooltip=Intervalle entre deux sauvegardes automatiques (en millisecondes). Pour d\u00E9sactiver la sauvegarde automatique, saisir 2 000 000 000.
 OptionPanel.time_for_delayed_selection=D\u00E9lai pour la s\u00E9lection
@@ -1297,6 +1305,8 @@ OptionPanel.validate_invalid_number_format=Le format de nombre n'est pas valide
 OptionPanel.validate_write_without_read=Script : pensez \u00E0 ajouter le droit de lecture / \u00E9criture sur les fichiers
 OptionPanel.validation_error=<html>Erreur : <p><em>{0}</em>.<p>Merci de modifier les pr\u00E9f\u00E9rences.
 OptionPanel.validation_warning=<html>Avertissement : <p><em>{0}
+OptionPanel.vertical_child_gap=Espacement avec le fils
+OptionPanel.vertical_child_gap.tooltip=Espacement vertical entre fils
 OptionPanel.vi=Vietnamien
 OptionPanel.wheel_velocity=Vitesse
 OptionPanel.wheel_velocity.tooltip=Une valeur plus grande donne des effets de mouvements plus rapides sur la carte.
@@ -1726,6 +1736,11 @@ summary_not_possible=Impossible de cr\u00E9er une synth\u00E8se pour le(s) n\u01
 SummaryNodeAction.text=Fin de synth\u00E8se
 svg=*.svg
 template_dir=Mod\u00E8les
+TextAlignAction.CENTER.text=Centrer le texte
+TextAlignAction.DEFAULT.text=Par d\u00E9faut
+TextAlignAction.LEFT.text=Texte align\u00E9 \u00E0 gauche
+TextAlignAction.RIGHT.text=Texte align\u00E9 \u00E0 droite
+textalignment=Alignement du texte
 TimeListAction.text=Afficher la liste des alertes...
 TimeListAction.tooltip=Montre toutes les alertes horaire ainsi que les n\u0153uds associ\u00E9s.
 TimeManagementAction.text=Afficher le calendrier...
@@ -1751,6 +1766,7 @@ UnfoldAllAction.text=Tout d\u00E9plier
 UnfoldAllAction.tooltip=D\u00E9plie les n\u0153uds s\u00E9lectionn\u00E9s ainsi que leurs fils
 UnfoldOneLevelAction.text=D\u00E9plier un niveau
 UnfoldOneLevelAction.tooltip=D\u00E9plie un niveau des n\u0153uds s\u00E9lectionn\u00E9s
+unparsedLatexPatternFormat=LaTeX non pars\u00E9
 up=Monter
 UpConditionAction.text=Monter
 update_failed=La mise \u00E0 jour a \u00E9chou\u00E9. D\u00E9tail de l''erreur : {0}
