--- a/freeplane/resources/translations/Resources_hr.properties
+++ b/freeplane/resources/translations/Resources_hr.properties
@@ -139,6 +139,7 @@ automatic_layout_disabled=Onemogu\u0107en
 automatically_save_message=Mapa je automatski spremljena (koriste\u0107i ime datoteke {0}) ...
 AutomaticEdgeColorHookAction.text=Automatska boja ruba
 AutomaticLayout.ALL=Za sve
+AutomaticLayout.COLUMNS=za stupce
 AutomaticLayout.HEADINGS=Za razine
 AutomaticLayout.level=Oblik \u010Dvorova  {0}. razine
 AutomaticLayout.level.root=Oblik korijenskog \u010Dvora
@@ -674,6 +675,11 @@ LatexInsertLatexAction.msg1=<html>Poku\u0161avate umetnuti <i>staru</i> LaTeX fo
 LatexInsertLatexAction.msg2=<html>Ukratko: <ul><li>koristite "\\latex " prefiks u tekstu \u010Dvora ili</li><li><i>Pogled->Plo\u010Da oblikovanja</i>, i <i>Tekst \u010Dvora->Predlo\u017Eak/Oblik->Latex</i></li></ul></html>
 LatexInsertLatexAction.text=Dodaj LaTe&X formulu...
 latexPatternFormat=LaTeX
+LengthUnits.cm=cm
+LengthUnits.in=u
+LengthUnits.mm=mm
+LengthUnits.pt=pt
+LengthUnits.px=px
 less_than_two_selected_nodes=Morate odabrati barem dva \u010Dvora kako bi dodali poveznicu.
 license=Licenca: GPL 2 ili kasnije
 license_text=<html>Ovaj program je besplatan; mo\u017Eete ga dijeliti i/ili<br>mijenjati pod uvjetima kako stoji u GNU General Public License<br>koju je objavio Free Software Foundation; ili verziji 2<br>Licence ili (kao va\u0161a opcija) bilo koja kasnija verzija.<br><br>Ovaj program je napravljen u nadi da \u0107e biti koristan ,<br>ali BEZ IKAKVOG JAMSTVA; \u010Dak i bez impliciranog jamstva <br>TRGOVA\u010CKE ili POGODNOSTI ZA ODRE\u0110ENE NAMJENE.  Vidi<br>GNU General Public License za vi\u0161e detalja.<br><br>Trebali ste dobiti primjerak GNU General Public License<br>zajedno s ovim programom; ako niste, pi\u0161ite na Free Software<br>Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
@@ -918,6 +924,8 @@ OptionPanel.backup_file_number=Broj sigurnosnih kopija
 OptionPanel.Behaviour=Karakteristike
 OptionPanel.bezier=Bezier
 OptionPanel.bubble=Obla\u010Di\u0107
+OptionPanel.bubble_vertical_margin=Margina obla\u010Di\u0107a
+OptionPanel.bubble_vertical_margin.tooltip=Okomiti razmak margine obla\u010Di\u0107a
 OptionPanel.ca=Katalonski
 OptionPanel.Cancel=Odustani
 OptionPanel.center_selected_node=Automatsko klizanje prikaza mape
@@ -1280,6 +1288,7 @@ OptionPanel.structured_icon_toolbar=Strukturirana traka ikona
 OptionPanel.summary=Sa\u017Eetak
 OptionPanel.sv=\u0160vedski
 OptionPanel.text.use_ctrl_key=Kliknite na stavku izbornika dr\u017Ee\u0107i tipku  CTRL za dodjeljivanje tipkovni\u010Dke kratice
+OptionPanel.textalignment=Poravnavanje teksta
 OptionPanel.time_for_automatic_save=Vrijeme automatskog spremanja (msec.)
 OptionPanel.time_for_automatic_save.tooltip=<html> vrijeme izme\u0111u dva uzastopna automatska spremanja (u msec): za onemogu\u0107avanje automatskog spremanja potrebno je ovu vrijednost staviti na 2000000000.</html>
 OptionPanel.time_for_delayed_selection=Vrijeme ka\u0161njenja odabira
@@ -1289,6 +1298,7 @@ OptionPanel.toolTipManager.initialDelay=Vrijeme po\u010Detka prikaza, ms
 OptionPanel.toolTipManager.max_tooltip_width=\u0160irina opisa alata
 OptionPanel.toolTipManager.max_tooltip_width.tooltip=<html>Zadana \u0161irina opisa alata u pikselima</html>
 OptionPanel.toolTipManager.reshowDelay=Vrijeme ponovnog prikaza, ms
+OptionPanel.tr=Turski
 OptionPanel.uk_UA=Ukrajinski
 OptionPanel.undefined_font=Nedefiniran oblik slova
 OptionPanel.undo_levels=Broj poni\u0161tenja
@@ -1307,6 +1317,8 @@ OptionPanel.validate_invalid_number_format=Une\u0161en je neva\u017Ee\u0107i obl
 OptionPanel.validate_write_without_read=Izvo\u0111enje skripti: omogu\u0107ite \u010Ditanje i pisanje datoteka.
 OptionPanel.validation_error=<html><body>Potvrda gre\u0161ke/a:<p><em>{0}</em><p>Promijenite postavke kako bi uklonili gre\u0161ku/e.</body></html>
 OptionPanel.validation_warning=<html><body>Potvrda upozorenja:<p><em>{0}</em></body></html>
+OptionPanel.vertical_child_gap=Razmak \u010Dvorova Djece
+OptionPanel.vertical_child_gap.tooltip=Okomiti razmak izme\u0111u \u010Dvorova Djece
 OptionPanel.vi=Vijetnamski
 OptionPanel.wheel_velocity=Brzina
 OptionPanel.wheel_velocity.tooltip=Ve\u0107a vrijednost rezultira kod pomaka kota\u010Di\u0107a mi\u0161a br\u017Ee u\u010Dinke na mapi.
@@ -1484,7 +1496,7 @@ selection_method_delayed=Zaka\u0161njela automatska metoda odabira
 selection_method_direct=Prika\u017Ei odabrano
 SelectNoteAction.text=Prelazak iz bilje\u0161ke u \u010Dvor
 SelectNoteAction.tooltip=Prebaci iz bilje\u0161ke u \u010Dvor
-set_accelerator_on_next_click_action=Za kreiranje nove tipkovni\u010Dke kratice: dr\u017Eite pritisnutu 'Ctrl' tipku za vrijeme odabira stavke izbornika.
+set_accelerator_on_next_click_action=Za kreiranje nove tipkovni\u010Dke kratice: dr\u017Eite pritisnutu 'Ctrl' tipku za vrijeme odabira naredbe izbornika.
 SetAccelerator.dialogTitle=Dodjeljivanje tipkovni\u010Dkih kratica
 SetAccelerator.keystrokeDetected=Tipkovni\u010Dka kratica ''{0}''nije dodana niti jednoj stavci izbornika.
 SetAcceleratorOnNextClickAction.text=Pridru\u017Ei tipkovni\u010Dku kraticu\u2026
@@ -1737,6 +1749,11 @@ summary_not_possible=Ne mogu stvoriti \u010Dvor sa\u017Eetak za trenutni odabir
 SummaryNodeAction.text=\u010Cvor sa\u017Eetak
 svg=SVG
 template_dir=Predlo\u0161ci
+TextAlignAction.CENTER.text=Centrirani tekst
+TextAlignAction.DEFAULT.text=Zadano
+TextAlignAction.LEFT.text=Poravnaj tekst ulijevo
+TextAlignAction.RIGHT.text=Poravnaj tekst desno
+textalignment=Poravnavanje teksta
 TimeListAction.text=Prika\u017Ei popis vremenskih podsjetnika ...
 TimeListAction.tooltip=Prikazuje sve vremenske podsjetnike i pripadaju\u0107e \u010Dvorove.
 TimeManagementAction.text=Prika\u017Ei kalendar...
