--- a/freeplane/resources/translations/Resources_pt_PT.properties
+++ b/freeplane/resources/translations/Resources_pt_PT.properties
@@ -139,6 +139,7 @@ automatic_layout_disabled=desativado
 automatically_save_message=O mapa foi gravado automaticamente (com o nome {0})...
 AutomaticEdgeColorHookAction.text=Cor da linha autom\u00E1tica
 AutomaticLayout.ALL=para todos os n\u00F3s
+AutomaticLayout.COLUMNS=para colunas
 AutomaticLayout.HEADINGS=para n\u00F3s finais
 AutomaticLayout.level=N\u00EDvel {0}
 AutomaticLayout.level.root=Ra\u00EDz
@@ -675,6 +676,11 @@ LatexInsertLatexAction.msg1=<html>Est\u00E1 a tentar inserir uma f\u00F3rmula La
 LatexInsertLatexAction.msg2=<html>Em resumo: <ul><li>use um prefixo "\\latex " no n\u00F3 de texto ou</li><li><i>Ver->Propriedades</i>, e depois <i>Texto do n\u00FAcleo->Formatar->Latex</i></li></ul></html>
 LatexInsertLatexAction.text=Adicionar f\u00F3rmula &LaTex...
 latexPatternFormat=LaTex
+LengthUnits.cm=cm
+LengthUnits.in=pol
+LengthUnits.mm=mm
+LengthUnits.pt=pt
+LengthUnits.px=px
 less_than_two_selected_nodes=Tem de selecionar pelo menos dois n\u00F3s para criar liga\u00E7\u00F5es.
 license=Licen\u00E7a: GPL 2 ou posterior
 license_text=<html>Este programa \u00E9 gratuito; pode redistribui-lo e/ou<br>modific\u00E1-lo sob os termos da licen\u00E7a p\u00FAblica geral - GNU General Public License<br>como publicado pela Free Software Foundation; seja a vers\u00E3o 2<br>da Licen\u00E7a, ou (por escolha sua) outra vers\u00E3o posterior.<br><br>Este programa \u00E9 distribu\u00EDdo na esperan\u00E7a de que seja \u00FAtil,<br>mas SEM QUALQUER GARANTIA; sem sequer a garantia impl\u00EDcita de<br>VALOR COMERCIAL ou SERVIR UM PROP\u00D3SITO PARTICULAR. Veja a<br>GNU General Public License para mais detalhes.<br><br>Dever\u00E1 ter recebido uma c\u00F3pia da GNU General Public License<br>juntamente com este programa; se n\u00E3o, escreva para Free Software<br>Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
@@ -919,6 +925,8 @@ OptionPanel.backup_file_number=N\u00FAmero de c\u00F3pias de seguran\u00E7a a ma
 OptionPanel.Behaviour=Comportamento
 OptionPanel.bezier=Curva suave (B\u00E9zier)
 OptionPanel.bubble=Bolha
+OptionPanel.bubble_vertical_margin=Margem da bolha
+OptionPanel.bubble_vertical_margin.tooltip=Espa\u00E7o vertical na margem da bolha do n\u00F3
 OptionPanel.ca=Catal\u00E3o, Valencia/Catal\u00E0
 OptionPanel.Cancel=Cancelar
 OptionPanel.center_selected_node=Centrar n\u00F3 selecionado automaticamente
@@ -1282,6 +1290,7 @@ OptionPanel.structured_icon_toolbar=Barra de \u00EDcones estruturada
 OptionPanel.summary=Resumo
 OptionPanel.sv=Sueco / Svenska
 OptionPanel.text.use_ctrl_key=Usar 'Atribuir atalho' no menu Ferramentas
+OptionPanel.textalignment=Alinhamento de texto
 OptionPanel.time_for_automatic_save=Tempo para grava\u00E7\u00E3o autom\u00E1tica
 OptionPanel.time_for_automatic_save.tooltip=<html> tempo decorrido entre duas grava\u00E7\u00F5es autom\u00E1ticas (em mseg): para desativar grava\u00E7\u00F5es autom\u00E1ticas defina este n\u00FAmero para 2000000000.</html>
 OptionPanel.time_for_delayed_selection=Tempo para atraso da sele\u00E7\u00E3o
@@ -1291,6 +1300,7 @@ OptionPanel.toolTipManager.initialDelay=Atraso inicial, mseg
 OptionPanel.toolTipManager.max_tooltip_width=Comprimento da sugest\u00E3o
 OptionPanel.toolTipManager.max_tooltip_width.tooltip=<html>A dimens\u00E3o predefinida da sugest\u00E3o em pixels.</html>
 OptionPanel.toolTipManager.reshowDelay=Voltar a mostrar atraso, mseg
+OptionPanel.tr=Turco / T\u00FCrk\u00E7e
 OptionPanel.uk_UA=Ucraniano / \u0423\u043A\u0440\u0430\u0457\u043D\u0441\u044C\u043A\u0430
 OptionPanel.undefined_font=Tipo de letra indefinida
 OptionPanel.undo_levels=N\u00EDveis de "Desfazer"
@@ -1309,6 +1319,8 @@ OptionPanel.validate_invalid_number_format=Formato padr\u00E3o num\u00E9rico inv
 OptionPanel.validate_write_without_read=Scripts: considere adicionar a leitura \u00E0 escrita de ficheiros.
 OptionPanel.validation_error=<html><body>Erro(s) de valida\u00E7\u00E3o:<p><em>{0}</em><p>por favor altere as prefer\u00EAncias para reparar o(s) erro(s).</body></html>
 OptionPanel.validation_warning=<html><body>Aviso(s) de valida\u00E7\u00E3o:<p><em>{0}</em></body></html>
+OptionPanel.vertical_child_gap=Espa\u00E7o do filho
+OptionPanel.vertical_child_gap.tooltip=Dist\u00E2ncia vertical entre n\u00F3s-filho
 OptionPanel.vi=Vietnamita / Ti\u1EBFng Vi\u1EC7t
 OptionPanel.wheel_velocity=Velocidade
 OptionPanel.wheel_velocity.tooltip=Um valor alto resulta num mais r\u00E1pido efeito dos movimentos da roda do rato no mapa.
@@ -1738,6 +1750,11 @@ summary_not_possible=Imposs\u00EDvel criar n\u00F3-resumo para a sele\u00E7\u00E
 SummaryNodeAction.text=N\u00F3-resumo (definir/repor)
 svg=SVG
 template_dir=Modelos padr\u00E3o
+TextAlignAction.CENTER.text=Texto centrado
+TextAlignAction.DEFAULT.text=Predefini\u00E7\u00E3o
+TextAlignAction.LEFT.text=Texto alinhado \u00E0 esquerda
+TextAlignAction.RIGHT.text=Texto alinhado \u00E0 direita
+textalignment=Alinhamento de texto
 TimeListAction.text=Gerir tarefas...
 TimeListAction.tooltip=Mostra todos os agendamentos e os n\u00F3s correspondentes.
 TimeManagementAction.text=Gerir tempo...
